API config cont. -  GET ok - POST trbl

--- a/studentprojectAPI/Properties/launchSettings.json
+++ b/studentprojectAPI/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51044",
+      "applicationUrl": "http://localhost:6600",
       "sslPort": 44338
     }
   },
@@ -11,11 +11,11 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
       "launchUrl": "api/records",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:51044"
     },
     "studentprojectAPI": {
       "commandName": "Project",
