--- a/studentprojectAPI/appsettings.Development.json
+++ b/studentprojectAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=studentprojectAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Database=studentprojectMVC;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,30 +11,8 @@
   },
   "AllowedHosts": "*"
 }
+// Server=(localdb)\\mssqllocaldb;Database=studentprojectMVC;Trusted_Connection=True;MultipleActiveResultSets=true
 
+// Data Source was server or Server
 
-//{
-//  "ConnectionStrings": {
-//    "DefaultConnection": "Data Source=;Initial Catalog=;User ID=;Password=;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True;"
-//  },
-//  "Logging": {
-//    "LogLevel": {
-//      "Default": "Information",
-//      "Microsoft": "Warning",
-//      "Microsoft.Hosting.Lifetime": "Information"
-//    }
-//  },
-//  "AllowedHosts": "*"
-//}
-
-
-
-//{
-//  "Logging": {
-//    "LogLevel": {
-//      "Default": "Information",
-//      "Microsoft": "Warning",
-//      "Microsoft.Hosting.Lifetime": "Information"
-//    }
-//  }
-//}
+// Data Source=(localdb)\\mssqllocaldb;Database=studentprojectMVC;Trusted_Connection=True;MultipleActiveResultSets=true;
