--- a/studentprojectAPI/appsettings.Production.json
+++ b/studentprojectAPI/appsettings.Production.json
@@ -1,11 +1,8 @@
-//{
-//  "ConnectionStrings": {
-//    "DefaultConnection": "Data Source=;Initial Catalog=;User ID=;Password=;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True;"
-//  }
-//}
-  //
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=studentprojectAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=mssql015.db.hosting;Initial Catalog=ID336492_record;User ID=ID336492_record;Password=i8fghjCs;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True;"
   }
 }
+
+
+
