--- a/studentprojectMVC/Properties/launchSettings.json
+++ b/studentprojectMVC/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     "iisExpress": {
       "applicationUrl": "http://localhost:51815",
       "sslPort": 44388
-    } // "applicationUrl": "http:/ /localhost:60248",
+    }
   },
   "profiles": {
     "IIS Express": {
@@ -20,7 +20,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_DETAILEDERRORS": "1",
-        "ASPNETCORE_ENVIRONMENT": "Production"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "applicationUrl": "http://www.studentproject.be"
     }
