--- a/studentprojectMVC/appsettings.Production.json
+++ b/studentprojectMVC/appsettings.Production.json
@@ -1,14 +1,5 @@
-//{
-//  "ConnectionStrings": {
-//    "DefaultConnection": "Data Source=;Initial Catalog=;User ID=;Password=;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True;"
-//  }
-//}
-// Data Source=mssql015.db.hosting;Initial Catalog=;User ID=;Password=********;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False
-
-// Data Source=;Initial Catalog=;Integrated Security=False;User Id=;Password=;MultipleActiveResultSets=True;providerName=System.Data.SqlClient
-
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=studentprojectMVC;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=mssql015.db.hosting;Initial Catalog=ID336492_record;User ID=ID336492_record;Password=i8fghjCs;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False; MultipleActiveResultSets=True;"
   }
 }
