--- a/.gitignore
+++ b/.gitignore
@@ -250,6 +250,10 @@ ServiceFabricBackup/
 *.ldf
 *.ndf
 
+appsettings.json
+appsettings.Development.json
+appsettings.Production.json
+
 # Business Intelligence projects
 *.rdl.data
 *.bim.layout
