--- a/studentprojectAPI/appsettings.Development.json
+++ b/studentprojectAPI/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\mssqllocaldb;Database=studentprojectMVC;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "to be inserted"
   },
   "Logging": {
     "LogLevel": {
@@ -11,8 +11,4 @@
   },
   "AllowedHosts": "*"
 }
-// Server=(localdb)\\mssqllocaldb;Database=studentprojectMVC;Trusted_Connection=True;MultipleActiveResultSets=true
-
-// Data Source was server or Server
-
-// Data Source=(localdb)\\mssqllocaldb;Database=studentprojectMVC;Trusted_Connection=True;MultipleActiveResultSets=true;
+// Data Source was Server
