--- a/studentprojectMVC/web.config
+++ b/studentprojectMVC/web.config
@@ -7,6 +7,22 @@
   For more info see https: /go.microsoft.com/fwlink/?linkid=838655 -->
   
   <system.webServer>
+    <!--29-8-2012 begin -->
+    <!--<handlers>
+      <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
+    </handlers>
+    <aspNetCore processPath="dotnet"
+                arguments=".\AlbumViewerNetCore.dll"
+                stdoutLogEnabled="false"
+                stdoutLogFile=".\logs\stdout"
+                forwardWindowsAuthToken="false">
+    <environmentVariables>
+      <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="443" />
+      <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
+    </environmentVariables>
+    </aspNetCore>-->
+    <!--29-8-2012 end -->
+    
     <!--Block Track and Trace=> Source:  https: /blog.elmah.io/the-ultimate-guide-to-secure-cookies-with-web-config-in-net/-->
     <security>
       <requestFiltering removeServerHeader="true" >
@@ -16,16 +32,23 @@
         </verbs>
       </requestFiltering>
     </security>
- <handlers>
-      <!--<remove name="aspNetCore" />-->
-      <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
-    </handlers>
-    <aspNetCore processPath="dotnet" arguments=".\studentprojectMVC.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout">
+ <!--<handlers>
+   --><!--remove name="aspNetCore"/--><!--
+   <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+    </handlers>-->
+    <!--aspNetCore processPath="dotnet" arguments=".\studentprojectMVC.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout"-->
+    
+    
+    <!--29-8-2012 begin -->
+    <!--aspNetCore processPath="dotnet" arguments=".\studentprojectMVC.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" -->
+        
       <!--<environmentVariables>
         <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="443" />
         <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Production" />
       </environmentVariables>-->
-    </aspNetCore>
+    <!--/aspNetCore-->
+    <!--29-8-2012 end -->
+    
     <httpProtocol>
       <customHeaders>
         <remove name="X-Powered-By" />
@@ -52,13 +75,13 @@
         </preCondition>
       </preConditions>
       <!-- force https Source: https: /my.combell.com/nl/product/webhosting/windows/ssl/studentproject_be/hostname/studentproject_be -->
-      <!--<rule name="Redirect to http" enabled="true" patternSyntax="Wildcard" stopProcessing="true">
+      <!--rule name="Redirect to http" enabled="true" patternSyntax="Wildcard" stopProcessing="true">
         <match url="*" negate="false"/>
         <conditions logicalGrouping="MatchAny">
           <add input="{HTTPS}" pattern="off" />
         </conditions>
         <action type="Redirect" url="https://{HTTP_HOST} {REQUEST_URI}" redirectType="Found" />
-      </rule>-->
+      </rule-->
       <!-- Source of rewrite code below: https:/ tomssl.com/how-to-fix-the-http-response-headers-on-azure-web-apps-to-get-an-a-plus-on-securityheaders-io/ -->
         <rule name="Add Strict-Transport-Security only when using HTTPS" enabled="true">
           <match serverVariable="RESPONSE_Strict_Transport_Security" pattern=".*" />
