--- a/studentprojectMVC/Properties/launchSettings.json
+++ b/studentprojectMVC/Properties/launchSettings.json
@@ -4,25 +4,32 @@
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:51815",
-      "sslPort": 44388
+      "sslPort": 44364
     }
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "Project",
+      "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5001"
     },
     "studentprojectMVC": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "http://www.studentproject.be",
       "environmentVariables": {
-        "ASPNETCORE_DETAILEDERRORS": "1",
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://www.studentproject.be"
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
     }
   }
 }
+
+//"studentprojectMVC": {
+//      "commandName": "Project",
+//      "launchBrowser": true,
+//      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+//      "environmentVariables": {
+//        "ASPNETCORE_ENVIRONMENT": "Development"
