--- a/studentprojectMVC/appsettings.Development.json
+++ b/studentprojectMVC/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=studentprojectMVC;Trusted_Connection=True;MultipleActiveResultSets=true;"
+    "DefaultConnection": "to be inserted"
   },
   "Logging": {
     "LogLevel": {
@@ -11,5 +11,3 @@
   },
   "AllowedHosts": "*"
 }
-
-// Server=(localdb)\\mssqllocaldb;Database=studentprojectMVC;Trusted_Connection=True;MultipleActiveResultSets=true
