--- a/studentprojectMVC/appsettings.json
+++ b/studentprojectMVC/appsettings.json
@@ -1,4 +1,4 @@
-{  
+{
   //"https_port": 443,
   "Logging": {
     "LogLevel": {
@@ -7,5 +7,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Auth0": {
+    "Domain": "to be inserted",
+    "ClientId": "to be inserted",
+    "ClientSecret": "to be inserted"
+  }
+  // Auth0 credentials here: Domain, ClientId, ClientSecret
 }
+
