--- a/studentprojectMVC/Properties/launchSettings.json
+++ b/studentprojectMVC/Properties/launchSettings.json
@@ -19,17 +19,10 @@
     "studentprojectMVC": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://www.studentproject.be",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Production"
-      }
+      },
+      "applicationUrl": "https://www.studentproject.be"
     }
   }
 }
-
-//"studentprojectMVC": {
-//      "commandName": "Project",
-//      "launchBrowser": true,
-//      "applicationUrl": "https://localhost:5001;http://localhost:5000",
-//      "environmentVariables": {
-//        "ASPNETCORE_ENVIRONMENT": "Development"
