--- a/studentprojectMVC/web.config
+++ b/studentprojectMVC/web.config
@@ -5,7 +5,11 @@
   <!--<location path="." inheritInChildApplications="false">-->
   <!-- To customize the asp.net core module uncomment and edit the following section. 
   For more info see https: /go.microsoft.com/fwlink/?linkid=838655 -->
-  
+
+    <runtime>
+      <AppContextSwitchOverrides value="Switch.System.Net.DontEnableSystemDefaultTLsVersions=false"/>
+    </runtime>
+    
   <system.webServer>
     <!--29-8-2012 begin -->
     <!--<handlers>
@@ -37,7 +41,8 @@
    <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
     </handlers>-->
     <!--aspNetCore processPath="dotnet" arguments=".\studentprojectMVC.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout"-->
-    
+
+   
     
     <!--29-8-2012 begin -->
     <!--aspNetCore processPath="dotnet" arguments=".\studentprojectMVC.dll" stdoutLogEnabled="true" stdoutLogFile=".\logs\stdout" -->
@@ -122,6 +127,9 @@
     <httpRuntime enableVersionHeader="false" />
     <!--Secure Cookies => Source: https:/ blog.elmah.io/the-ultimate-guide-to-secure-cookies-with-web-config-in-net/ -->
     <httpCookies httpOnlyCookies="true" requireSSL="true"/>
+<!-- TLS -->
+    <compilation targetFramework="4.7.2"/>
+    <httpRuntime targetFramework="4.7.2"/>
   </system.web>
   </location>
 
