Ensure that the project runs without a database in development

--- a/studentprojectMVC/appsettings.Development.json
+++ b/studentprojectMVC/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "to be inserted"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
